fix horizontal scrolling

--- a/sass/components/media_entity_browser.view.scss
+++ b/sass/components/media_entity_browser.view.scss
@@ -83,6 +83,10 @@
   }
 }
 
+.entity-browser-form {
+  overflow: hidden;
+}
+
 
 .view-media-entity-browser:after,
 .entity-browser-form .entities-list:after {
